# project_layout

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Makefile.Ninja  Makefile.make  README.md  autogen.sh  configure.in
src/: main.cpp
tools/: README.md  deps_install.sh  dev_setup.sh
